added run section and its responsive layout

--- a/index.html
+++ b/index.html
@@ -117,6 +117,23 @@
 
     </div>
 
+    <div class="run container display-flex">
+        <div class="run-content">
+            <h3 class="run-title">Run an Extra <br>Mile Easily</h3>
+            <p class="run-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+            <button class="run-btn">Join Now</button>
+
+
+
+        </div>
+
+        <div class="run-image">
+            <img src="./images/run.jpg" alt="">
+
+        </div>
+
+    </div>
+
     
 
        
