added team section and its responsive layout

--- a/index.html
+++ b/index.html
@@ -134,6 +134,60 @@
 
     </div>
 
+    <div class="team container">
+        <div class="team-content">
+            <h3 class="team-title">Meet Our Team  </h3>
+            <p class="team-desc">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+
+
+        </div>
+        <div class="gallery ">
+            <div class="team-card">
+                <img src="./images/trainer1.png" alt="">
+                <p class="trainer-name">Jerome Bell</p>
+                <p class="trainer-desc">Trainer</p>
+
+            </div>
+            <div class="team-card">
+                <img src="./images/trainer2.png" alt="">
+                <p class="trainer-name">Cameron William</p>
+                <p class="trainer-desc">Trainer</p>
+
+
+            </div>
+            <div class="team-card">
+                <img src="./images/trainer3.png" alt="">
+                <p class="trainer-name">Darrell Steward </p>
+                <p class="trainer-desc">Trainer</p>
+
+
+            </div>
+            <div class="team-card">
+                <img src="./images/trainer4.png" alt="">
+                <p class="trainer-name">Dianne Russell</p>
+                <p class="trainer-desc">Trainer</p>
+
+
+            </div>
+            <div class="team-card">
+                <img src="./images/trainer5.png" alt="">
+                <p class="trainer-name">Cody Fisher</p>
+                <p class="trainer-desc">Trainer</p>
+
+
+            </div>
+            <div class="team-card">
+                <img src="./images/trainer6.png" alt="">
+                <p class="trainer-name">Theresa Webb</p>
+                <p class="trainer-desc">Trainer</p>
+
+
+            </div>
+
+        </div>
+
+    </div>
+
     
 
        
