--- a/index.html
+++ b/index.html
@@ -134,6 +134,113 @@
 
     </div>
 
+
+    <div class="bmi">
+
+        <div class="bmi-content">
+
+            <h2 class="bmi-title">BMI Calculator</h2>
+            <p class="bmi-desc">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+
+
+        </div>
+
+        <div class="bmi-banner">
+            <div class="bmi-chart">
+
+                <h3 class="bmi-chart-title">BMI Calculator Chart</h3>
+
+                <table class="table" >
+
+                    <thead>
+
+                        <tr>
+                            <th>BMI</th>
+                            <th>Weight Status</th>
+                        </tr>
+
+                    </thead>
+
+                    <tbody>
+
+                        <tr>
+                            <td>Below 18.5</td>
+                            <td>Underweight</td>
+
+                        </tr>
+                        <tr>
+                            <td>18.5 - 24.9</td>
+                            <td>Healthy</td>
+                        </tr>
+
+                        <tr>
+                            <td>25.0 - 29.9</td>
+                            <td>Overweight</td>
+                        </tr>
+                        <tr>
+                            <td>30.0 - and Above</td>
+                            <td>Obese</td>
+                        </tr>
+
+
+                    </tbody>
+
+
+
+
+
+                </table>
+
+
+
+            </div>
+
+            <div class="bmi-cal">
+                <h2 class="bmi-cal-title">Calculate Your BMI</h2>
+                <p class="bmi-cal-desc">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. </p>
+
+                <form action="">
+
+                    <div class="form-row-1">
+
+                        <input type="text" placeholder="Height/cm">
+                        <input type="text" name="" id="" placeholder="Weight/kg">
+
+                    </div>
+
+                    <div class="form-row-2">
+                        <input type="text" placeholder="Age">
+                        <select name="" id="">
+                            <option value="Sex">Sex</option>
+                        </select>
+
+                    </div>
+
+                    <div class="form-row-3">
+                        <select name="" id="">
+                            <option value="">Select an activity factor</option>
+                        </select>
+
+                    </div>
+
+                    <button>Calculate</button>
+
+
+
+
+
+
+
+                </form>
+
+            </div>
+
+
+        </div>
+
+
+    </div>
+
     <div class="team container">
         <div class="team-content">
             <h3 class="team-title">Meet Our Team  </h3>
