--- a/index.html
+++ b/index.html
@@ -284,14 +284,14 @@
 
                     <div class="form-row-2">
                         <input type="text" placeholder="Age">
-                        <select name="" id="">
+                        <select class="select" name="" id="">
                             <option value="Sex">Sex</option>
                         </select>
 
                     </div>
 
                     <div class="form-row-3">
-                        <select name="" id="">
+                        <select class="select2" name="" id="">
                             <option value="">Select an activity factor</option>
                         </select>
 
